{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 245,
  "lineage": "29d46fb4-bb24-9705-92ff-022eab0b5584",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:443233915352:vpc/vpc-0f814e3eabb10c733",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0ca3b9e78d760b540",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0202eb041035f61b2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f814e3eabb10c733",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c7543a4d299c9957",
            "owner_id": "443233915352"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:443233915352:loadbalancer/app/smartnest-alb/1e7116db7da18fef",
            "arn_suffix": "app/smartnest-alb/1e7116db7da18fef",
            "desync_mitigation_mode": "defensive",
            "dns_name": "smartnest-alb-1336468433.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:443233915352:loadbalancer/app/smartnest-alb/1e7116db7da18fef",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "smartnest-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0dd5d6779b065bfe4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04c07f15844760eb4"
              },
              {
                "subnet_id": "subnet-06535f780aaed03bb"
              },
              {
                "subnet_id": "subnet-06f9d003b66d7b547"
              }
            ],
            "subnets": [
              "subnet-04c07f15844760eb4",
              "subnet-06535f780aaed03bb",
              "subnet-06f9d003b66d7b547"
            ],
            "vpc_id": "vpc-0f814e3eabb10c733",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "aws_security_group.this",
            "data.aws_subnet_ids.this",
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:443233915352:listener/app/smartnest-alb/1e7116db7da18fef/9263cd9fb64cc17c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "This ALB is live now.",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:443233915352:listener/app/smartnest-alb/1e7116db7da18fef/9263cd9fb64cc17c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:443233915352:loadbalancer/app/smartnest-alb/1e7116db7da18fef",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.this",
            "aws_security_group.this",
            "data.aws_subnet_ids.this",
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:443233915352:targetgroup/sn20230129012707290700000001/74f40ad84cb66e7d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:443233915352:listener-rule/app/smartnest-alb/1e7116db7da18fef/9263cd9fb64cc17c/6e6b572ad3737a93",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:443233915352:listener-rule/app/smartnest-alb/1e7116db7da18fef/9263cd9fb64cc17c/6e6b572ad3737a93",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:443233915352:listener/app/smartnest-alb/1e7116db7da18fef/9263cd9fb64cc17c",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.this",
            "aws_lb_listener.http",
            "aws_lb_target_group.this",
            "aws_security_group.this",
            "data.aws_subnet_ids.this",
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:443233915352:targetgroup/sn20230129012707290700000001/74f40ad84cb66e7d",
            "arn_suffix": "targetgroup/sn20230129012707290700000001/74f40ad84cb66e7d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:443233915352:targetgroup/sn20230129012707290700000001/74f40ad84cb66e7d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "sn20230129012707290700000001",
            "name_prefix": "sn",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f814e3eabb10c733"
          },
          "dependencies": [
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:443233915352:security-group/sg-0dd5d6779b065bfe4",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0dd5d6779b065bfe4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230129012707290700000002",
            "name_prefix": "terraform-",
            "owner_id": "443233915352",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f814e3eabb10c733"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}